--- a/app/src/main/res/layout-sw320dp/fragment_profile_set_calorie_goal.xml
+++ b/app/src/main/res/layout-sw320dp/fragment_profile_set_calorie_goal.xml
@@ -108,6 +108,7 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
         app:layout_constraintTop_toBottomOf="@+id/etSetCalorieDaily" />
 
@@ -123,6 +124,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView41"
@@ -137,6 +139,7 @@
         android:text="Kcal"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView41"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toEndOf="@+id/etSetCalorieWeekly"
@@ -180,7 +183,6 @@
         android:fontFamily="@font/outfit_medium"
         android:text="DAILY CALORIES"
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView42"
         app:layout_constraintTop_toTopOf="@+id/imageView42" />
 
@@ -193,7 +195,6 @@
         android:fontFamily="@font/outfit_medium"
         android:text="WEEKLY CALORIES"
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView45"
         app:layout_constraintTop_toTopOf="@+id/imageView45" />
 
