--- a/app/src/main/res/layout-sw360dp/fragment_profile_set_steps_goal.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_profile_set_steps_goal.xml
@@ -61,7 +61,6 @@
         android:fontFamily="@font/outfit_medium"
         android:text="DAILY STEPS"
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView38"
         app:layout_constraintTop_toTopOf="@+id/imageView38" />
 
@@ -157,6 +156,7 @@
         android:text="WEEKLY STEPS"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/etSetStepDaily" />
 
@@ -172,6 +172,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
@@ -186,6 +187,7 @@
         android:text="Steps"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.10"
         app:layout_constraintStart_toEndOf="@+id/etSetStepWeekly"
