--- a/app/src/main/res/layout-sw411dp/fragment_profile_set_steps_goal.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_profile_set_steps_goal.xml
@@ -66,8 +66,8 @@
 
     <TextView
         android:id="@+id/tvSetStepDaily"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="21dp"
+        android:layout_height="50dp"
         android:fontFamily="@font/outfit_medium"
         android:text="0"
         android:textColor="?attr/colorPrimary"
@@ -156,6 +156,7 @@
         android:text="WEEKLY STEPS"
         android:textColor="@color/primaryText"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
         app:layout_constraintTop_toBottomOf="@+id/etSetStepDaily" />
 
@@ -171,6 +172,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView35"
@@ -185,6 +187,7 @@
         android:text="Steps"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView35"
         app:layout_constraintHorizontal_bias="0.10"
         app:layout_constraintStart_toEndOf="@+id/etSetStepWeekly"
