--- a/app/src/main/res/layout-sw411dp/fragment_profile_set_water_goal.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_profile_set_water_goal.xml
@@ -109,6 +109,7 @@
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         android:textColor="@color/primaryText"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.2"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
@@ -125,6 +126,7 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintStart_toStartOf="@+id/imageView40"
         app:layout_constraintTop_toBottomOf="@+id/etSetWaterDaily" />
 
@@ -137,6 +139,7 @@
         android:text="mL"
         android:textColor="?attr/colorPrimary"
         android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="@+id/imageView40"
         app:layout_constraintHorizontal_bias="0.1"
         app:layout_constraintStart_toEndOf="@+id/etSetWaterWeekly"
@@ -179,7 +182,6 @@
         android:fontFamily="@font/outfit_medium"
         android:text="DAILY WATER"
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView43"
         app:layout_constraintTop_toTopOf="@+id/imageView43" />
 
@@ -192,7 +194,6 @@
         android:fontFamily="@font/outfit_medium"
         android:text="WEEKLY WATER "
         android:textColor="@color/primaryText"
-        android:textSize="12sp"
         app:layout_constraintStart_toStartOf="@+id/imageView44"
         app:layout_constraintTop_toTopOf="@+id/imageView44" />
 
