Fixed Error Changing Email

--- a/app/src/main/res/layout-sw360dp/fragment_profile_steps.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_profile_steps.xml
@@ -184,5 +184,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView28" />
 </androidx.constraintlayout.widget.ConstraintLayout>
