--- a/app/src/main/res/layout-sw360dp/fragment_settings_delete.xml
+++ b/app/src/main/res/layout-sw360dp/fragment_settings_delete.xml
@@ -4,30 +4,32 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".settingsFragment">
+    tools:context=".settingsDeleteFragment">
 
     <ImageView
         android:id="@+id/imageView84"
         android:layout_width="0dp"
-        android:layout_height="320dp"
+        android:layout_height="450dp"
         android:src="@drawable/rectangle_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
-        <ImageView
-            android:id="@+id/imageView85"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            app:layout_constraintStart_toStartOf="@+id/imageView84"
-            app:layout_constraintTop_toTopOf="@+id/imageView84"
-            app:srcCompat="@drawable/user_icon" />
+    <ImageView
+        android:id="@+id/imageView85"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toTopOf="@+id/imageView84"
+        app:srcCompat="@drawable/user_icon" />
 
     <TextView
-        android:id="@+id/tvSettingsUsername"
+        android:id="@+id/tvDesignUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
@@ -35,7 +37,6 @@
         android:textColor="@color/primaryText"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toTopOf="@+id/imageView84" />
 
@@ -46,7 +47,7 @@
         android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
-        app:layout_constraintTop_toBottomOf="@+id/tvSettingsUsername"
+        app:layout_constraintTop_toBottomOf="@+id/tvDesignUsername"
         app:srcCompat="@drawable/line_divider_pink" />
 
     <TextView
@@ -88,24 +89,24 @@
         app:layout_constraintTop_toBottomOf="@+id/textView159" />
 
     <ImageView
-            android:id="@+id/imSettingsEditProfile"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView84"
-            app:layout_constraintTop_toBottomOf="@+id/textView158"
-            app:srcCompat="@drawable/arrow_right_black" />
+        android:id="@+id/imDesignEditProfile"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/textView158"
+        app:srcCompat="@drawable/arrow_right_black" />
 
-        <ImageView
-            android:id="@+id/imSettingsChangePass"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView84"
-            app:layout_constraintTop_toBottomOf="@+id/imSettingsEditProfile"
-            app:srcCompat="@drawable/arrow_right_black" />
+    <ImageView
+        android:id="@+id/imDesignChangePass"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/imDesignEditProfile"
+        app:srcCompat="@drawable/arrow_right_black" />
 
     <ImageView
         android:id="@+id/imageView109"
@@ -143,25 +144,62 @@
         app:layout_constraintStart_toStartOf="@+id/imageView109"
         app:layout_constraintTop_toBottomOf="@+id/textView162" />
 
-        <ImageView
-            android:id="@+id/imSettingsDesign"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginTop="20dp"
-            android:layout_marginEnd="20dp"
-            app:layout_constraintEnd_toEndOf="@+id/imageView109"
-            app:layout_constraintTop_toBottomOf="@+id/textView162"
-            app:srcCompat="@drawable/arrow_right_black" />
+    <ImageView
+        android:id="@+id/imDesign"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        app:layout_constraintEnd_toEndOf="@+id/imageView109"
+        app:layout_constraintTop_toBottomOf="@+id/textView162"
+        app:srcCompat="@drawable/arrow_right_black" />
 
     <ProgressBar
-        android:id="@+id/pbSettingFragment"
+        android:id="@+id/pbSettingDesign"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminateTint="?attr/colorPrimary"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView84"
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toTopOf="@+id/imageView84" />
+
+    <TextView
+        android:id="@+id/textView49"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Account Deletion"
+        android:textColor="@color/primaryText"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/textView185" />
+
+    <ImageView
+        android:id="@+id/imDeleteBack"
+        android:layout_width="25dp"
+        android:layout_height="25dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/arrow_down_icon"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/imDesign" />
+
+    <Button
+        android:id="@+id/btnSettingsDelete"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/btn_mid_rounded_red"
+        android:fontFamily="@font/outfit_medium"
+        android:text="Delete Account"
+        android:textColor="@color/btnCancelColor"
+        app:layout_constraintEnd_toEndOf="@+id/imageView84"
+        app:layout_constraintStart_toStartOf="@+id/imageView84"
+        app:layout_constraintTop_toBottomOf="@+id/textView49" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
