--- a/app/src/main/res/layout-sw411dp/fragment_settings.xml
+++ b/app/src/main/res/layout-sw411dp/fragment_settings.xml
@@ -13,8 +13,10 @@
         android:src="@drawable/rectangle_shape"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/imageView85"
@@ -163,4 +165,5 @@
         app:layout_constraintEnd_toEndOf="@+id/imageView84"
         app:layout_constraintStart_toStartOf="@+id/imageView84"
         app:layout_constraintTop_toTopOf="@+id/imageView84" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
